# external-mesa

./: Android.bp  Android.common.mk  Android.mk  LICENSE  METADATA  OWNERS  WORKSPACE.bazel  aosp-gen-prebuilt.sh  meson.build  meson_options.txt
src/gfxstream/: .clang-format  .gitignore  Android.bp  CMakeLists.txt  LICENSE  OWNERS  README.md  meson.build  meson_options.txt
src/gfxstream/aemu/: Android.bp
src/gfxstream/codegen/scripts/: cerealgenerator.py
src/gfxstream/common/: meson.build
src/gfxstream/common/etc/: etc.cpp  meson.build
src/gfxstream/common/vulkan/: CMakeLists.txt
src/gfxstream/docs/: deqp.md
src/gfxstream/guest/: Android.bp  BUILD.gn  meson.build
src/gfxstream/guest/GoldfishAddressSpace/: Android.bp
src/gfxstream/guest/OpenglCodecCommon/: ChecksumCalculator.cpp  GLClientState.cpp  GLESTextureUtils.cpp  GLSharedGroup.cpp  StateTrackingSupport.h  TextureSharedData.h  glUtils.cpp  glUtils.h  meson.build
src/gfxstream/guest/OpenglSystemCommon/: ANativeWindow.h  ANativeWindowAndroid.cpp  ANativeWindowAndroid.h  EGLImage.h  EmulatorFeatureInfo.h  FormatConversions.cpp  Gralloc.h  GrallocGoldfish.cpp  GrallocGoldfish.h  GrallocMinigbm.cpp  GrallocMinigbm.h  HostConnection.cpp  HostConnection.h  HostConnectionGles.cpp  HostConnectionGles.h  ProcessPipe.cpp  ProcessPipe.h  QemuPipeStream.cpp  QemuPipeStream.h  TestingAndroidWsi.cpp  TestingAndroidWsi.h  ThreadInfo.cpp  ThreadInfo.h  TraceProviderFuchsia.cpp  VirtioGpuPipeStream.cpp  VirtioGpuPipeStream.h  meson.build
src/gfxstream/guest/android/: Android.bp
src/gfxstream/guest/connection-manager/: Android.bp
src/gfxstream/guest/fuchsia/: meson.build  port.cc
src/gfxstream/guest/iostream/: Android.bp  meson.build
src/gfxstream/guest/platform/: Android.bp
src/gfxstream/guest/qemupipe/: meson.build  qemu_pipe_guest.cpp  qemu_pipe_stub.cpp
src/gfxstream/guest/vulkan/: Android.bp  gfxstream_vk_device.cpp  meson.build
src/gfxstream/guest/vulkan_enc/: Android.bp  ResourceTracker.cpp  VkEncoder.cpp  VkEncoder.h  func_table.cpp  func_table.h  goldfish_vk_counting_guest.cpp  goldfish_vk_counting_guest.h  goldfish_vk_deepcopy_guest.cpp  goldfish_vk_deepcopy_guest.h  goldfish_vk_extension_structs_guest.cpp  goldfish_vk_extension_structs_guest.h  goldfish_vk_marshaling_guest.cpp  goldfish_vk_marshaling_guest.h  goldfish_vk_reserved_marshaling_guest.cpp  goldfish_vk_reserved_marshaling_guest.h  goldfish_vk_transform_guest.cpp  goldfish_vk_transform_guest.h  meson.build  vulkan_gfxstream.h  vulkan_gfxstream_structure_type.h
src/gfxstream/host/: BlobManager.cpp  BlobManager.h  BorrowedImage.h  Buffer.cpp  Buffer.h  CMakeLists.txt  ChannelStream.cpp  ChannelStream.h  ColorBuffer.cpp  ColorBuffer.h  Compositor.h  ContextHelper.h  Display.h  DisplaySurface.cpp  DisplaySurface.h  DisplaySurfaceUser.cpp  DisplaySurfaceUser.h  FrameBuffer.cpp  FrameBuffer.h  FrameworkFormats.h  GfxStreamAgents.cpp  GfxStreamBackendInitOverride.cpp  GlesCompat.h  Handle.h  Hwc2.cpp  Hwc2.h  NativeSubWindow.h  NativeSubWindow_android.cpp  NativeSubWindow_cocoa.m  NativeSubWindow_qnx.cpp  NativeSubWindow_stub.cpp  NativeSubWindow_win32.cpp  NativeSubWindow_x11.cpp  PostCommands.h  PostWorker.cpp  PostWorker.h  PostWorkerGl.cpp  PostWorkerGl.h  ProcessResources.h  ReadBuffer.cpp  (+36 more)
src/gfxstream/host/apigen-codec-common/: ChecksumCalculatorThreadInfo.cpp  Makefile  ProtocolUtils.h  meson.build
src/gfxstream/host/compressedTextureFormats/: AstcCpuDecompressor.h  AstcCpuDecompressorImpl.cpp  AstcCpuDecompressorNoOp.cpp  AstcCpuDecompressor_unittest.cpp  meson.build
src/gfxstream/host/vulkan/: BorrowedImageVk.cpp  BorrowedImageVk.h  BufferVk.cpp  BufferVk.h  CMakeLists.txt  ColorBufferVk.cpp  ColorBufferVk.h  Compositor.frag  Compositor.vert  CompositorFragmentShader.h  CompositorVertexShader.h  CompositorVk.cpp  CompositorVk.h  DebugUtilsHelper.cpp  DebugUtilsHelper.h  DisplaySurfaceVk.cpp  DisplaySurfaceVk.h  DisplayVk.cpp  DisplayVk.h  PostWorkerVk.cpp  PostWorkerVk.h  RenderThreadInfoVk.cpp  RenderThreadInfoVk.h  SwapChainStateVk.cpp  SwapChainStateVk.h  VkAndroidNativeBuffer.cpp  VkAndroidNativeBuffer.h  VkCommonOperations.cpp  VkCommonOperations.h  VkDecoderContext.h  VkDecoderGlobalState.cpp  VkDecoderGlobalState.h  VkDecoderGlobalState_unittest.cpp  VkFormatUtils.cpp  VkFormatUtils.h  VkFormatUtils_unittest.cpp  VkQsriTimeline.h  VkQsriTimeline_unittest.cpp  VkReconstruction.cpp  VkReconstruction.h  (+14 more)
src/gfxstream/include/OpenGLESDispatch/: DispatchTables.h  EGLDispatch.h  GLESv1Dispatch.h  GLESv2Dispatch.h  OpenGLDispatchLoader.h  RenderEGL_extensions_functions.h  RenderEGL_extensions_static_translator_namespaced_header.h  RenderEGL_functions.h  RenderEGL_snapshot_functions.h  RenderEGL_snapshot_static_translator_namespaced_header.h  RenderEGL_static_translator_namespaced_header.h  StaticDispatch.h  gles1_extensions_functions.h  gles1_extensions_static_translator_namespaced_header.h  gles1_only_functions.h  gles1_only_static_translator_namespaced_header.h  gles2_extensions_functions.h  gles2_extensions_static_translator_namespaced_header.h  gles2_only_functions.h  gles2_only_static_translator_namespaced_header.h  gles31_only_functions.h  gles31_only_static_translator_namespaced_header.h  (+10 more)
src/gfxstream/qnx/: README.md  common.mk  pinfo.mk
src/gfxstream/scripts/: build-nested-vulkan-loader.sh  generate-apigen-sources.sh  generate-dispatch-headers.sh  generate-gfxstream-vulkan.sh  glsl-shader-to-spv-c-array.py
src/intel/shaders/: float64_spv.h  intel_gfx110_shaders.spv  intel_gfx110_shaders_spv.h  intel_gfx11_shaders_code.h  intel_gfx120_shaders.spv  intel_gfx120_shaders_spv.h  intel_gfx125_shaders.spv  intel_gfx125_shaders_code.h  intel_gfx125_shaders_spv.h  intel_gfx12_shaders_code.h  intel_gfx200_shaders.spv  intel_gfx200_shaders_spv.h  intel_gfx20_shaders_code.h  intel_gfx300_shaders.spv  intel_gfx300_shaders_spv.h  intel_gfx30_shaders_code.h  intel_gfx80_shaders.spv  intel_gfx80_shaders_spv.h  intel_gfx8_shaders_code.h  intel_gfx90_shaders.spv  intel_gfx90_shaders_spv.h  intel_gfx9_shaders_code.h  meson.build
(+677 files in other folders)
